Fri Apr 20 18:20:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-7.h:
          msvc7 doesn't has intrin.h

Fri Apr 20 14:31:26 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/htbp.mpb:

          Added a 'requires' for ace_uuid.

        * examples/APG/Naming/naming.mpc:

          Added a 'requires' for ace_other (ACE naming services are within the
          ace_other MPC feature) to each project.

        * examples/Naming/Naming.mpc:

          Added a 'requires' for ace_other to each project.

        * performance-tests/Misc/Misc.mpc:

          Added a 'requires' for ace_other to the Misc_test_naming project.

        * bin/tao_orb_tests.lst:

          Only run Bug_2768_Regression when CORBA messaging is enabled.

Fri Apr 20 12:10:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-7.h:
        * ace/config-win32-msvc-8.h:
        * ace/config-win32-msvc.h:
          Intel C++ 9.0 doesn't have the interlocked functions

Fri Apr 20 11:44:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_1330_Regression

Fri Apr 20 11:35:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Base.inl:
          Added ACE_HAS_BSWAP_16, ACE_HAS_BSWAP_32, and ACE_HAS_BSWAP_64.
          When one of the defines is set, we include os_byteswap.h and
          then use bswap_16, bswap_32, and bswap_64.

        * ace/config-linux-common.h:
          Added ACE_HAS_BYTESWAP_H, ACE_HAS_BSWAP_16, ACE_HAS_BSWAP_32, and
          ACE_HAS_BSWAP_64. This fixes bugzilla bug 2901.

Fri Apr 20 08:29:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
          Updated to also run automatic regression tests with VxWorks 6.x
          in kernel mode.

Thu Apr 19 18:24:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_byteswap.h: