@@ -1,3 +1,10 @@
+Mon Apr 23 12:19:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-win32-msvc.h:
+        * ace/config-win32-msvc-9.h:
+          Initial files for msvc9. Microsoft released a public beta called
+          Orcas
+
 Fri Apr 20 18:20:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-win32-msvc-7.h:
